--- a/style.css
+++ b/style.css
@@ -3275,3 +3275,224 @@ footer
  .btn--line{
    background: #54bc4d;
  }
+
+/*
+archive
+ */
+ /*
+ Content > Item
+  */
+ .archive-site-main > article.article,
+ .blog-post,
+ .news-archive-wrap li {
+ 	background: #ffffff;
+ 	float: left;
+ 	width: calc((100% - 240px) / 3);
+ 	height: 250px;
+ 	margin: 0 40px 50px;
+ 	position: relative;
+ }
+
+ .archive-site-main > article.article::after,
+ .blog-post::after,
+ .news-archive-wrap li::after {
+   content: '';
+   position: absolute;
+   left: 25%;
+   bottom: 0;
+   width: 50%;
+   border-bottom: solid 1px #2fcdb4;
+ }
+
+ .blog-post:hover,
+ .news-archive-wrap li:hover {
+ 	opacity: 0.5;
+ 	top: 3px;
+ }
+
+ .blog-post a,
+ .news-archive-wrap li a {
+ 	position: absolute;
+ 	display: block;
+ 	width: 100%;
+ 	height: 100%;
+ 	top: 0;
+ 	left: 0;
+ }
+
+ @media screen and (max-width: 1230px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+ 		margin: 0 20px 50px;
+     width: calc((100% - 120px) / 3);
+ 	}
+ }
+
+ @media screen and (max-width: 890px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+ 		width: calc((100% - 80px) / 2);
+ 	}
+ }
+
+ @media screen and (max-width: 564px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+ 		width: calc((100% - 40px) / 2);
+ 		margin: 0 10px 50px;
+ 	}
+ }
+
+ @media screen and (max-width: 610px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+    height: 300px;
+  }
+}
+
+ @media screen and (max-width: 524px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+ 		width: 400px;
+ 		height: 320px;
+ 		margin: 0 auto 30px;
+ 		float: none;
+ 	}
+ }
+
+ @media screen and (max-width: 430px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+ 		width: 340px;
+ 		height: 340px;
+ 	}
+
+ }
+
+ @media screen and (max-width: 380px) {
+ 	.archive-site-main > article.article,
+ 	.blog-post,
+	.news-archive-wrap li {
+ 		width: 290px;
+ 		height: 300px;
+ 	}
+ }
+
+ /*
+ ## Title
+  */
+
+ .archive-item-title {
+ 	font-family: 'Cabin', Helvetica, sans-serif;
+ 	font-size: 20px;
+ 	line-height: 25px;
+ 	color: #575756;
+ 	letter-spacing: 2px;
+ 	font-weight: 600;
+ 	margin: auto;
+ 	text-transform: none;
+ }
+
+ .archive-item-title a {
+ 	font-size: 24px;
+ 	font-size: 1em;
+ 	color: #575756;
+ 	margin: 0;
+   text-decoration: none;
+ }
+
+ .entry-header {
+ 	padding: 30px 0;
+ }
+
+ .archive-content-inner-wrap {
+ 	text-align: center;
+ }
+
+ .archive-content-inner-wrap .byline {
+   display: block;
+ }
+
+ @media screen and (max-width: 950px) {
+ 	.archive-content-inner-wrap {
+ 		padding: 20px 10px 0px;
+ 	}
+ }
+
+ @media screen and (max-width: 500px) {
+   .entry-header{
+     padding-bottom: 10px;
+   }
+ }
+
+ @media screen and (max-width: 524px) {
+ 	.archive-content-inner-wrap {
+ 		padding: 2px 10px 0px;
+ 	}
+ }
+
+.archive-content-desc {
+  margin: 5px 0;
+  overflow: auto;
+}
+
+ /*
+ Tag
+  */
+ .archive-item-tag {
+ 	text-align: center;
+  float: left;
+ }
+
+ .archive-item-tag span {
+ 	margin: 0 5px;
+   color: #D0324B
+ }
+
+ /*
+ author
+  */
+.archive-item-author-wrap {
+  overflow: auto;
+  float: right;
+}
+
+.archive-item-author-wrap img {
+  height: 40px;
+  width: 40px;
+  float: left;
+}
+
+ /*
+ Image
+  */
+
+ .post-thumbnail-wrap {
+ 	text-align: center;
+ 	width: 100%;
+ 	height: 100px;
+ }
+
+ .post-thumbnail-wrap img {
+	 width: 100%;
+   height: 100%;
+   object-fit: cover;
+ }
+
+ @media screen and (max-width: 524px) {
+ 	.post-thumbnail-wrap {
+ 		height: 200px;
+ 	}
+ }
+
+ @media screen and (max-width: 380px) {
+ 	.post-thumbnail-wrap {
+ 		height: 150px;
+ 	}
+ }
