--- a/style.css
+++ b/style.css
@@ -2763,6 +2763,11 @@ topのナビゲーション
 	position: relative;
 }
 
+.header-main-navigation-items-wrap--member {
+	width: 150% !important;
+	letter-spacing: 1px;
+}
+
 .header-main-navigation-items-wrap li a {
   font-size: 15px;
   text-decoration: none;
