--- a/style.css
+++ b/style.css
@@ -233,6 +233,20 @@ input[type="search"]::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
 
+.moire-button {
+	text-decoration: none !important;
+	border: solid 3px #7fcaad;
+	padding: 10px;
+	border-radius: 5px;
+	margin-top: 10px;
+	box-shadow: 0px 1px 2px 0px #cccccc;
+}
+
+.moire-button:hover {
+	color: #ffffff !important;
+	background: #7fcaad;
+}
+
 fieldset {
 	border: 1px solid #c0c0c0;
 	margin: 0 2px;
