--- a/css/front.css
+++ b/css/front.css
@@ -108,7 +108,7 @@
  .front-block-title {
    width: 100px;
    height: 1px;
-   background-color: #D0324B;
+   background-color: #ff2a36;
    display: block;
    margin: 0 auto;
  }
@@ -206,6 +206,8 @@ HPブロック
 .project-content-column-content {
   padding: 0 30px;
   font-size: 16px;
+  text-align: left;
+  height: 100px;
 }
 
 .project-content-column-button {
@@ -218,7 +220,7 @@ HPブロック
   color: #ffffff;
   padding: 15px 15px;
   border-radius: 5px;
-  box-shadow: 2px 2px 10px -3px #202223;
+  box-shadow: 1px 1px 3px -2px #202223;
 }
 
 .project-content-column-button a:hover {
@@ -230,6 +232,7 @@ HPブロック
 @media screen and (max-width: 1198px) {
   .project-content-column-content {
     padding: 12px 20px;
+    height: 150px;
   }
 }
 
